fixed some code before submit.

--- a/es6-template-literals/index.html
+++ b/es6-template-literals/index.html
@@ -20,7 +20,7 @@
 
     const bio = `My name is ${firstName} ${lastName} and I am ${age} years old.`;
 
-    console.log(bio);
+    console.log('Bio:', bio);
 
     const fruit = 'apple';
     const item = 'pen';
