--- a/es6-template-literals/index.html
+++ b/es6-template-literals/index.html
@@ -10,9 +10,9 @@
   <script>
     const number = 9200;
     const street = 'Irvine Center Drive';
-    const address = `LearningFuze: ${number} ${street}`;
+    const address = `${number} ${street}`;
 
-    console.log(address);
+    console.log('LearningFuze:', address);
 
     const firstName = 'Uzair';
     const lastName = 'Ashraf';
